# autonomous-diffusion-experiment-factory

./: .gitignore  METHODOLOGY.md  Makefile  README.md  environment.yml  pyproject.toml
.githooks/: post-commit
contracts/: benchmark_contract.yaml
outputs/: auto30_progress.md  auto30_summary.md  freeze_record.yaml
outputs/locked_test/20260524T154736_cifar10_locked_test/: header.json  summary.json
outputs/paper/: report_locked.tex  report_round3b.tex  report_wasserstein.tex  table_fid_at_nfe.tex  table_pareto_auc.tex
outputs/paper/new_generic/: report_level3_path.tex  report_theory.aux  report_theory.out  report_theory.tex  report_theory.toc  report_wasserstein.aux  report_wasserstein.out
outputs/paper/previous/: _enriched_summary.json  report_locked.aux  report_locked.out  report_locked.tex  report_round3b.aux  report_round3b.out  table_main.tex
scripts/: aggregate_ays_round5b.py  rf_level3_sampler.py  run_ab_both_confirm.sh  run_ays_round5b.sh  run_deis_seq_confirm.sh  run_dpmv3_sweep.sh  wasserstein_Rdisc_validate.py  wasserstein_exponent_sweep.py  wasserstein_fid_endtoend.py  wasserstein_fid_validate.py
src/autonomous_diffusion/: __init__.py
src/autonomous_diffusion/critic/: __init__.py  freeze.py  guards.py
src/autonomous_diffusion/experiments/: _run_utils.py  run_eval.py  run_generate.py  run_locked_test.py  run_sweep.py
src/autonomous_diffusion/metrics/: __init__.py  clean_fid.py  pareto.py  risk.py
tests/: test_contract_load.py  test_critic_guards.py  test_sampler_interface.py  test_scheduler_math.py  test_seed_reproducibility.py
(+34 files in other folders)
